# agentreplay

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  README.md  mkdocs.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: docs.yml  publish.yml  regression.yml
cassettes/sample-001/: cassette.json  events.jsonl
docs/: api.md  architecture.md  cassette-format.md  cli.md  contributing.md  evaluation.md  examples.md  getting-started.md  index.md  quick-start.md
docs/guides/: ci.md  frameworks.md  mutation.md  recording.md  replaying.md
examples/: async_agent.py  counterfactual.py  langgraph_agent.py  langgraph_real.py  openai_agent.py  raw_agent.py  streaming_agent.py
scripts/: record_sample_cassette.py
src/agentreplay/: __init__.py  auto.py  cassette.py  ci.py  cli.py  constants.py  diff.py  errors.py  hashing.py  logging.py  mutate.py  recorder.py  regression.py  replayer.py  session.py  types.py
src/agentreplay/benchmark/: __init__.py  overhead.py
src/agentreplay/frameworks/: __init__.py  anthropic_sdk.py  autogen.py  crewai.py  langgraph.py  openai_sdk.py  raw.py
src/agentreplay/interceptors/: __init__.py  clock.py  http.py  llm.py  streaming.py
src/agentreplay/storage/: __init__.py  blob.py  event_log.py  meta_index.py
src/agentreplay/validation/: __init__.py  cli.py  fidelity.py  tasks.py
tests/: conftest.py  test_async.py  test_audit3_fixes.py  test_audit_fixes.py  test_benchmark.py  test_cassette.py  test_ci.py  test_cli.py  test_diff.py  test_event_log_index.py  test_export_import.py  test_framework_adapters.py  test_hashing.py  test_langgraph_integration.py  test_mutate.py  test_qa_blob_preservation.py  test_record_replay.py  test_storage.py  test_streaming.py  test_validation.py
