[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentreplay"
version = "0.1.0"
description = "Deterministic replay and counterfactual debugging for AI agent reliability. Bit-exact replay of agent runs with zero model calls."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Victor Ndunda", email = "victor@gadda00.users.noreply.github.com" }]
keywords = [
    "ai-agents",
    "replay",
    "debugging",
    "determinism",
    "counterfactual",
    "langgraph",
    "llm",
    "testing",
    "ci",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Debuggers",
]
dependencies = [
    "click>=8.0",
    "httpx>=0.24",
    "pydantic>=2.0",
]

[project.optional-dependencies]
openai = ["openai>=1.0"]
anthropic = ["anthropic>=0.18"]
langgraph = ["langgraph>=0.2", "langchain-core>=0.3"]
crewai = ["crewai>=0.4"]
autogen = ["autogen>=0.2", "pyautogen>=0.2"]
datasets = ["datasets>=2.0"]
all = ["openai>=1.0", "anthropic>=0.18", "langgraph>=0.2", "langchain-core>=0.3", "crewai>=0.4", "pyautogen>=0.2", "datasets>=2.0"]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.0",
    "ruff>=0.4",
    "mypy>=1.5",
]
docs = [
    "mkdocs-material>=9.0",
    "mkdocstrings[python]>=0.25",
    "pymdown-extensions>=10.0",
]

[project.scripts]
agentreplay = "agentreplay.cli:cli"

[project.urls]
Homepage = "https://github.com/gadda00/agentreplay"
Repository = "https://github.com/gadda00/agentreplay"
Issues = "https://github.com/gadda00/agentreplay/issues"
Documentation = "https://github.com/gadda00/agentreplay#readme"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
agentreplay = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra --strict-markers"

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.9"
strict = false
ignore_missing_imports = true
